<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

   <LinearLayout
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@color/white"
     android:layout_alignParentBottom="true"
   >
    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:background="#2f88f0"
     />
     <LinearLayout
        android:id="@+id/choose_photo_dialog_take_photo_layout"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="56.5dip"
      >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_normal"
            android:textColor="#1b191a"
            android:text="@string/take_photo"
         />
     </LinearLayout>
     <LinearLayout
           android:id="@+id/choose_photo_dialog_photo_album_layout"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="56.5dip"
           >
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:textSize="@dimen/font_size_normal"
               android:textColor="#1b191a"
               android:text="@string/photo_album"
               />
       </LinearLayout>
       <LinearLayout
           android:id="@+id/choose_photo_dialog_cancel_layout"
           android:gravity="center"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:padding="20dip"
           >
           <Button
               android:id="@+id/choose_photo_dialog_cancel_button"
               android:layout_width="match_parent"
               android:layout_height="56dip"
               android:textSize="@dimen/font_size_normal"
               android:textColor="#888888"
               android:text="@string/cancel"
               android:layout_gravity="center"
               android:background="@drawable/round_buttong_bg"
               />
       </LinearLayout>
   </LinearLayout>
</RelativeLayout>