<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/ui_white_bg_gray_border"
            android:layout_marginTop="11dip"
            android:baselineAligned="false"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="12dip"
                android:paddingBottom="12dip"
                android:paddingRight="15dip"
                android:paddingLeft="20dip"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_010101"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/people_photo"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    />
                <view
                    android:id="@+id/settings_photo_img"
                    android:layout_height="56dip"
                    android:layout_width="56dip"
                    class="com.andy.ui.libray.component.CircleImageView"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_launcher"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#dddddd"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingTop="12dip"
                android:paddingBottom="12dip"
                android:paddingRight="15dip"
                android:paddingLeft="20dip"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_010101"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/qianming"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:id="@+id/settings_qianming"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_888888"
                    android:textSize="@dimen/font_size_small"
                    android:layout_alignParentRight="true"
                    android:text="封口蜡江东父老卡机发拉就发拉就发的啦"
                    android:singleLine="false"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:maxEms="13"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="11dip"
            android:background="@drawable/ui_white_bg_gray_border"
            >
            <RelativeLayout
                android:id="@+id/settings_update_layout"
                android:layout_width="match_parent"
                android:layout_height="47dip"
                android:gravity="center_vertical"
                android:paddingRight="15dip"
                android:paddingLeft="20dip"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_010101"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/check_update"
                    android:layout_alignParentLeft="true"
                    />
                <ImageView
                    android:layout_width="9dip"
                    android:layout_height="18.5dip"
                    android:src="@drawable/gray_right_arrow"
                    android:scaleType="centerInside"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#dddddd"
                />
            <RelativeLayout
                android:id="@+id/about_us_layout"
                android:layout_width="match_parent"
                android:layout_height="47dip"
                android:gravity="center_vertical"
                android:paddingRight="15dip"
                android:paddingLeft="20dip"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_010101"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/about_us"
                    android:layout_alignParentLeft="true"
                    />
                <ImageView
                    android:layout_width="9dip"
                    android:layout_height="18.5dip"
                    android:src="@drawable/gray_right_arrow"
                    android:scaleType="centerInside"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dip"
                android:background="#dddddd"
                />
            <RelativeLayout
                android:id="@+id/suggest_feedback_layout"
                android:layout_width="match_parent"
                android:layout_height="47dip"
                android:gravity="center_vertical"
                android:paddingRight="15dip"
                android:paddingLeft="20dip"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_010101"
                    android:singleLine="true"
                    android:textSize="@dimen/font_size_normal"
                    android:text="@string/suggest_feedback"
                    android:layout_alignParentLeft="true"
                    />
                <ImageView
                    android:layout_width="9dip"
                    android:layout_height="18.5dip"
                    android:src="@drawable/gray_right_arrow"
                    android:scaleType="centerInside"
                    android:layout_alignParentRight="true"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>